Improved Linux Compatilibity